--- a/style.css
+++ b/style.css
@@ -1,8 +1,32 @@
 body {
     background-color: #f3f3f3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
+.title-card{
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    font-size: 30px;
+}
+
+h1,h3 {
+    margin: 0;
+    padding: 0;
+    padding-bottom: 5px;
+}
+
+/* h1,h3 {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+} */
+
+/* 
 button {
     background-color: #c1626200;
     border: none;
-}
+} */
