added and sized the background image and renamed it, removing the extra

--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 body {
-    background-color: #f3f3f3;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-image: url("Images/bg_1.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .title-card{
@@ -18,15 +21,3 @@ h1,h3 {
     padding: 0;
     padding-bottom: 5px;
 }
-
-/* h1,h3 {
-    margin: 0;
-    padding: 0;
-    text-align: center;
-} */
-
-/* 
-button {
-    background-color: #c1626200;
-    border: none;
-} */
