Fixed background image filepath in style.css

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url("Images/bg_1.jpg");
+    background-image: url("Images/bg_img.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
