--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 body {
+    padding: 0;
+    margin: 0;
+}
+
+.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
