--- a/style.css
+++ b/style.css
@@ -64,3 +64,10 @@ h3 {
     cursor: pointer;
     box-shadow: inset -2px 2px rgb(30, 9, 50),-4px 5px rgb(30, 9, 50);
 }
+
+.title-card > button:hover {
+    background-color: rgb(54, 16, 91);
+    color: white;
+    box-shadow: inset -2px 2px rgb(30, 9, 50),-4px 5px rgb(30, 9, 50);
+}
+
