Added and fixed the footer to the page

--- a/style.css
+++ b/style.css
@@ -71,3 +71,19 @@ h3 {
     box-shadow: inset -2px 2px rgb(30, 9, 50),-4px 5px rgb(30, 9, 50);
 }
 
+.footer {
+    background-color: rgba(6, 0, 0, 0.574);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 5px 0;
+    text-align: center;
+    color: antiquewhite;
+}
+
+.footer > a {
+    padding: 5px 0;
+    color: yellow;
+    text-decoration: none;
+}
+  
