--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 .container2 {
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .title-card {
@@ -90,7 +90,6 @@ body {
 .footer > a {
     padding: 5px 0;
     color: yellow;
-    text-decoration: none;
 }
 
 .score-board {
@@ -106,4 +105,21 @@ body {
     font-family: 'pixel', Arial, sans-serif;
     box-shadow:inset -8px 8px 2px rgb(30, 9, 50);
 }
+
+.card{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 2px dotted rgb(250, 250, 249);
+    border-spacing: 3px;
+    background-color: rgb(109,33,183);
+    box-shadow: inset 4px -4px 0px rgb(69, 1, 26);
+    height: max-content;
+    width: max-content;
+    padding: 10px 10px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
   
