--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 10vh;
     height: 100vh;
     background-image: url("Images/bg_img.jpg");
     background-size: cover;
@@ -24,7 +24,7 @@ body {
 }
 
 .container2 {
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .title-card {
@@ -92,6 +92,16 @@ body {
     color: yellow;
 }
 
+.game-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 0;
+    
+}
+
 .score-board {
     display: flex;
     justify-content: center;
@@ -103,15 +113,15 @@ body {
     border: 4px dashed yellow;
     color: yellow;
     font-family: 'pixel', Arial, sans-serif;
-    transition: all 0.5s ease;
+    transition: all 0.2s ease;
     box-shadow:inset -8px 8px 2px rgb(30, 9, 50);
 }
 
 .card{
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     border: 2px dotted rgb(250, 250, 249);
     border-spacing: 3px;
     background-color: rgb(109,33,183);
