--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 10vh;
+    gap: 20px;
     height: 100vh;
     background-image: url("Images/bg_img.jpg");
     background-size: cover;
@@ -120,19 +120,18 @@ button:hover {
 }
 
 .card{
+    text-align: center;
+    max-width: 300px;
+    height: 200px;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     border: 2px dotted rgb(250, 250, 249);
     border-spacing: 3px;
     background-color: rgb(109,33,183);
     box-shadow: inset 4px -4px 0px rgb(69, 1, 26);
-    height: max-content;
-    width: max-content;
     padding: 10px 10px;
     border-radius: 10px;
-    overflow: hidden;
 }
 
 .options {
