--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ button:hover {
 
 .card{
     text-align: center;
-    max-width: 300px;
+    width: 300px;
     height: 200px;
     display: flex;
     justify-content: center;
@@ -132,6 +132,8 @@ button:hover {
     box-shadow: inset 4px -4px 0px rgb(69, 1, 26);
     padding: 10px 10px;
     border-radius: 10px;
+    white-space: pre-wrap;
+    margin: 10px;
 }
 
 .options {
